--- a/scss/variables/_variables.scss
+++ b/scss/variables/_variables.scss
@@ -26,10 +26,10 @@ $medium-gray: #999;
 $light-gray: #ddd;
 
 
-$color-purple : rgb(107, 71, 142);
-$color-teal   : rgb(99, 208, 223);
-$color-purple_light : rgb(118, 115, 192);
-$color-blue: rgb(99, 108, 178);
+$color-purple 			: #6b478e;
+$color-teal   			: #63d0df;
+$color-purple_light : #7673c0;
+$color-blue					: #636cb2;
 
 // Secondary Colors
 $color-pink  : rgb(237, 62, 122);
