--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -1,252 +1,204 @@
-// #{$all-buttons} {
-//   appearance: none;
-//   background-color: $action-color;
-//   border: 0;
-//   border-radius: $base-border-radius;
-//   color: #fff;
-//   cursor: pointer;
-//   display: inline-block;
-//   font-family: $base-font-family;
-//   font-size: $base-font-size;
-//   -webkit-font-smoothing: antialiased;
-//   font-weight: 600;
-//   line-height: 1;
-//   padding: $small-spacing $base-spacing;
-//   text-align: center;
-//   text-decoration: none;
-//   transition: background-color $base-duration $base-timing;
-//   user-select: none;
-//   vertical-align: middle;
-//   white-space: nowrap;
-//   &:hover,
-//   &:focus {
-//     background-color: shade($action-color, 20%);
-//     color: #fff;
-//   }
-//   &:disabled {
-//     cursor: not-allowed;
-//     opacity: 0.5;
-//     &:hover {
-//       background-color: $action-color;
-//     }
-//   }
-// }
-.btn-lg,
-.btn-group-lg > .btn {
-  padding: 10px 16px;
-  font-size: 18px;
-  line-height: 1.3333333;
-  border-radius: 6px;
-}
+$white: #fff;
+$black: #000;
+$color_tundora_approx: #444;
+$color_bunker_approx: #151515;
+$color_woodsmoke_approx: #111;
 
-.btn-sm,
-.btn-group-sm > .btn {
-  padding: 5px 10px;
-  font-size: 12px;
-  line-height: 1.5;
-  border-radius: 3px;
-}
+$black_70: rgba($black, .7);
+$black_40: rgba($black, .40);
+$white_75: rgba($white, .75);
+$white_75: rgba($white, .75);
 
-.btn-xs,
-.btn-group-xs > .btn {
-  padding: 1px 5px;
-  font-size: 12px;
-  line-height: 1.5;
-  border-radius: 3px;
-}
 
-.btn-block {
-  display: block;
-  width: 100%;
-}
 
+#{$all-buttons},
 .btn {
-  display: inline-block;
-  padding: 6px 12px;
-  margin-bottom: 0;
-  font-size: 14px;
-  font-weight: normal;
-  line-height: 1.42857143;
-  text-align: center;
-  white-space: nowrap;
-  vertical-align: middle;
-  -ms-touch-action: manipulation;
-  touch-action: manipulation;
-  cursor: pointer;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+  -webkit-font-smoothing: antialiased;
+  appearance: none;
+  background: rgba(34, 34, 34, 0.9);
   background-image: none;
-  border: 1px solid transparent;
-  border-radius: 4px;
-}
-
-.btn:focus,
-.btn:active:focus,
-.btn.active:focus,
-.btn.focus,
-.btn:active.focus,
-.btn.active.focus {
-  outline: thin dotted;
-  outline: 5px auto -webkit-focus-ring-color;
-  outline-offset: -2px;
-}
-
-.btn {
-  font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  border: 2px solid $color-teal;
-  padding: 0 26px;
-  height: 40px;
-  min-width: 150px;
-  line-height: 36px;
-  font-size: 12px;
-  font-weight: 700;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  border-radius: 0;
-  color: $color-teal;
-  text-align: center;
-  transition: all 0.3s ease;
-  -webkit-transition: all 0.3s ease;
-  -moz-transition: all 0.3s ease;
-
-  // margin-right: 8px;
-  // margin-bottom: 24px;
-}
-
-.btn:last-child,
-.btn:last-of-type {
-  margin-right: 0;
-}
-
-.btn:hover {
-  background: $color-teal;
+  border-color: #007095;
+  border-radius: $base-border-radius;
+  border: 2px solid transparent;
+  box-shadow: none;
   color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-family: $base-font-family;
+  font-size: 12px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  line-height: 1;
+  margin-bottom: 8px;
+  margin-right: 8px;
+  padding: $small-spacing $base-spacing;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+  touch-action: manipulation;
+  transition: background-color $base-duration $base-timing;
+  user-select: none;
+  vertical-align: middle;
+  white-space: nowrap;
+  &:last-child {
+    margin-right: 0;
+  }
+  &:last-of-type {
+    margin-right: 0;
+  }
+  &:hover,
+  &:focus {
+    font-weight: 500;
+    color: $white_75;
+    background: $black_70;
+    text-decoration: none;
+    outline: none;
+    border-color: transparent;
+    box-shadow: none;
+  }
+  &:active {
+    cursor: pointer !important;
+    outline: none !important;
+  }
+  &:disabled {
+    cursor: not-allowed;
+    opacity: 0.5;
+    &:hover {
+      background-color: $action-color;
+    }
+  }
+
+  &.btn-sm {
+    height: auto;
+    padding: 6px 17px;
+    font-size: 11px;
+    letter-spacing: 1px;
+  }
+  &.btn-md {
+    height: auto;
+    padding: 8px 37px;
+    font-size: 12px;
+  }
+  &.btn-lg {
+    height: auto;
+    padding: 12px 45px;
+    font-size: 13px;
+  }
+  &.btn-glass {
+    color: $white_75;
+    background: $black_40;
+    &:hover, 
+    &:focus {
+      color: $white;
+      background: $black;
+    }
+  }
+  &.btn-border {
+    color: $color_bunker_approx;
+    border: 2px solid $color_bunker_approx;
+    background: transparent;
+    &:hover, 
+    &:focus {
+      color: $white;
+      border-color: transparent;
+      background: $black;
+    }
+  }
+  &.btn-border-c {
+    color: $color-pink;
+    border: 2px solid $color-pink;
+    background: transparent;
+    &:hover,
+    &:focus {
+      color: $white;
+      border-color: transparent;
+      background: $color-pink;
+    }
+  }
+  &.btn-border-w {
+    color: $white;
+    border: 2px solid $white_75;
+    background: transparent;
+    &:hover,
+    &:focus {
+      color: $color_woodsmoke_approx;
+      border-color: transparent;
+      background: $white;
+    }
+  }
+  &.btn-w {
+    color: $color_woodsmoke_approx;
+    background: $white_75;
+    &:hover,
+    &:focus {
+      color: $color_woodsmoke_approx;
+      background: $white;
+    }
+  }
+  &.btn-w-color {
+    color: $color-pink;
+    background: $white;
+    &:hover,
+    &:focus {
+      color: $color_bunker_approx;
+      background: $white;
+    }
+  }
+  &.btn-color {
+    color: $white;
+    background: $color-pink;
+    &:hover,
+    &:focus {
+      color: $white;
+      background: $color-pink;
+      opacity: .85;
+    }
+  }
+  &.btn-circle {
+    border-radius: 30px;
+  }
 }
+
+
+
+
+
 
 .btn-icon {
-  width: 40px;
-  height: 40px;
-  font-size: 20px;
-  min-width: 0;
-  padding: 0;
-  line-height: 38px;
+  position: relative;
+  border: none;
+  overflow: hidden;
+  &.btn-small {
+    overflow: hidden;
+  }
+  > span {
+    width: 100%;
+    height: 50px;
+    line-height: 50px;
+    margin-top: -25px;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    color: $dark-gray;
+    font-size: 48px;
+    opacity: .2;
+    transition: all 0.2s cubic-bezier(0, 0, 0.58, 1);
+  }
+  &:hover > span {
+    opacity: 0;
+    transform: scale(2);
+  }
+  > span {
+    &.white {
+      color: $white;
+    }
+    &.black {
+      color: $black;
+    }
+  }
 }
 
-.btn-lg {
-  height: 50px;
-  line-height: 46px;
-  min-width: 200px;
-}
-
-.btn-icon.btn-lg {
-  width: 50px;
-  height: 50px;
-  line-height: 49px;
-  font-size: 24px;
-  min-width: 0;
-}
-
-.btn-icon.btn-sm {
-  width: 30px;
-  height: 30px;
-  line-height: 29px;
-  font-size: 13px;
-  min-width: 0;
-  padding: 0 0 0 1px !important;
-}
-
-.btn-sm {
-  height: 30px;
-  font-size: 11px;
-  line-height: 27px;
-  min-width: 0;
-}
-
-.btn-filled {
-  background: $color-teal;
-  color: #fff;
-}
-
-.btn-white,
-.image-bg .btn,
-.image-bg .btn:visited {
-  color: #fff;
-  border-color: #fff;
-}
-
-.btn-white:hover,
-.image-bg .btn:hover,
-.image-bg .btn:visited:hover {
-  background: #fff;
-  color: #222;
-}
-
-.image-bg .btn.btn-filled,
-.image-bg .btn-filled:visited {
-  border-color: $color-teal;
-}
-
-.image-bg .btn-filled:hover {
-  border-color: #fff;
-}
-
-.btn-rounded {
-  border-radius: 25px;
-}
-
-body.btn-rounded .btn {
-  border-radius: 25px !important;
-}
-
-.bg-light .btn {
-  border-color: #222;
-  color: #222;
-}
-
-.bg-light .btn:visited,
-.bg-light .btn:visited:hover {
-  color: #222;
-}
-
-.bg-light .btn-filled,
-.bg-light .btn-filled:visited {
-  color: #fff;
-}
-
-.btn:visited {
-  color: $color-teal;
-}
-
-.btn-white:visited,
-.btn:visited:hover {
-  color: #fff;
-}
-
-.btn-white:visited:hover {
-  color: #222;
-}
-
-.btn-filled:visited {
-  color: #fff;
-}
-
-.btn.bg-dark {
-  color: #fff;
-  border-color: #292929;
-}
-
-.btn.bg-dark:hover {
-  background: #434343;
-}
-
-.bg-primary .btn {
-  color: #fff;
-  border-color: #fff;
-}
-
-.bg-primary .btn:hover {
-  background: #fff;
-  color: $color-teal;
+.btn-full {
+  width: 100%;
 }
