--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -40,3 +40,44 @@ hr {
   border-top: 0;
   margin: $base-spacing 0;
 }
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .section-title {
+    max-width: 85%;
+    margin: auto;
+  }
+}
+
+
+#example-section {
+  padding: 80px 0;
+  background-color: #F6F9F9;
+}
+
+.section-title {
+  text-align: center;
+  h1 {
+    @include margin(0 0 15px);
+    font-size: 28px;
+    letter-spacing: 2px;
+    font-weight: $font-weight--bold;
+    line-height: 30px;
+    padding-bottom: 20px;
+    text-transform: uppercase;
+    position: relative;
+    &:before {
+      content: ' ';
+      position: absolute;
+      left: 50%;
+      bottom: 0;
+      margin-left: -20px;
+      width: 40px;
+      height: 3px;
+      background: #00D8B7;
+    }
+
+  }
+  p {
+    color: #929FA8;
+  }
+}
