--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -14,18 +14,14 @@ Home sections
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
   background-size: cover;
 }
 
 // Hero Text
 .home-content {
+  @include size(100%);
   position: relative;
   display: table;
-  width: 100%;
-  height: 100%;
   text-align: center;
 }
 
