--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -5,6 +5,16 @@ $navigation-background: $dark-gray;
 $navigation-color: transparentize(white, 0.2);
 $navigation-color-hover: white;
 
+
+
+$bar-thickness: 5px;
+// The thickness of the button bars
+$button-pad: 24px;
+// The left/right padding between button area and bars.
+$button-bar-space: 8px;
+// The spacing between button bars
+$button-transistion-duration: 0.3s;
+
 // Extends
 %nav-item-link {
   display: block;
@@ -24,22 +34,97 @@ $navigation-color-hover: white;
 
 .navigation {
   background: $navigation-background;
+  z-index: 1000 !important;
 
-  // Hamburger Menu
-  .navigation-menu-button {
+
+
+.navigation-menu-button {
+  $bar-thickness: 4px;
+  $button-pad: 24px;
+  $button-bar-space: 8px;
+  $button-transistion-duration: 0.3s;
+
+  float: right;
+  display: block;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+  width: $navigation-height_top;
+  height: $navigation-height_top;
+  font-size: 0;
+  text-indent: -9999px;
+  border-radius: 0;
+  border: none;
+  transition: background $button-transistion-duration;
+  background-color: transparent;
+
+  @include media($horizontal-bar-mode) {
+    display: none;
+  }
+
+  &:focus {
+    outline: none;
+  }
+
+  span {
     display: block;
-    float: right;
-    height: $navigation-height_top;
-    width: $navigation-height_top * 0.75;
-    line-height: $navigation-height_top;
-    text-align: center;
-    font-size: 30px;
-    color: $navigation-color-hover;
+    position: absolute;
+    top: $navigation-height_top / 2 - $bar-thickness / 2;
+    left: $button-pad;
+    right: $button-pad;
+    height: $bar-thickness;
+    background: rgb(255, 255, 255);
+    transition: background 0s $button-transistion-duration;
 
-    @include media($horizontal-bar-mode) {
-      display: none;
+    &::before,
+    &::after {
+      position: absolute;
+      display: block;
+      left: 0;
+      width: 100%;
+      height: $bar-thickness;
+      background-color: #fff;
+      content: "";
+      transition-duration: $button-transistion-duration, $button-transistion-duration;
+      transition-delay: $button-transistion-duration, 0s;
+    }
+
+    &::before {
+      top: -$bar-thickness - $button-bar-space;
+      transition-property: top, transform;
+    }
+
+    &::after {
+      bottom: -$bar-thickness - $button-bar-space;
+      transition-property: bottom, transform;
     }
   }
+
+  &.is-active {
+    background-color: $color-purple_light;
+
+    span {
+      background: none;
+
+      &::before {
+        top: 0;
+        transform: rotate(45deg);
+        transition-delay: 0s, $button-transistion-duration;
+      }
+
+      &::after {
+        bottom: 0;
+        transform: rotate(-45deg);
+        transition-delay: 0s, $button-transistion-duration;
+      }
+    }
+  }
+}
+
+ 
+
+
+
 
   .navigation-wrapper,
   .navigation-wrapper-top {
@@ -82,6 +167,9 @@ $navigation-color-hover: white;
       float: right;
       height: $navigation-height_top;
       line-height: $navigation-height_top;
+      > .btn {
+        margin-bottom: 0;
+      }
     }
   }
 
@@ -210,6 +298,7 @@ $navigation-color-hover: white;
   font-size: 14px;
   line-height: 18px;
   position: absolute;
+  letter-spacing: 0;
   top: 50%;
   left: $small-spacing;
   margin-top: -$small-spacing;
