--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -19,7 +19,15 @@ h6 {
 
 p {
   margin: 0 0 $small-spacing;
+
+  &.text {
+    font-weight: $font-weight--light;
+    color: #5f5f5f;
+    line-height: 1.8;
+  }
+
 }
+
 
 a {
   color: $action-color;
@@ -55,9 +63,11 @@ hr {
 }
 
 .section-title {
+  @include outer-container(750px);
   text-align: center;
   h1 {
     @include margin(0 0 15px);
+    color: $color-black;
     font-size: 28px;
     letter-spacing: 2px;
     font-weight: $font-weight--bold;
@@ -73,11 +83,11 @@ hr {
       margin-left: -20px;
       width: 40px;
       height: 3px;
-      background: #00D8B7;
+      background: $color-teal;
     }
 
   }
   p {
-    color: #929FA8;
+    line-height: 1.8;
   }
 }
