--- a/scss/components/_countdown.scss
+++ b/scss/components/_countdown.scss
@@ -42,7 +42,7 @@ ul.countdown {
     content: "";
     display: block;
     background: rgba($color-white, .95);
-    border-radius: 3px;
+    border-radius: $base-border-radius;
     transform: rotate(45deg);
     z-index: 1;
   }
