--- a/scss/components/_tabs.scss
+++ b/scss/components/_tabs.scss
@@ -2,19 +2,11 @@
 	@include outer-container(1000px);
 }
 
-//colors
-$color_celeste_approx: #ccc;
-$white: #fff;
-$color_tundora_approx: #444;
-
-//fonts
-$font_0: Aileron Bold;
-$font_1: Aileron SemiBold;
-$font_2: icomoon !important;
 
 .tabs-holder {
 	border: 1px solid $color-gray;
 	margin-top: 50px;
+	background-color: $base-background-color;
 	@include media($xsmall-only) {
 		padding: 10px;
 	}
@@ -40,12 +32,12 @@ $font_2: icomoon !important;
 				margin: 0;
 				border: 0;
 				a::before {
-					background: #fff;
+					background: $color-white;
 				}
 			}
 			@include media($xsmall-only) {
 				width: 100%;
-				border-bottom: 1px solid #ccc;
+				border-bottom: 1px solid $color-gray;
 				border-right: 0;
 			}
 			a {
@@ -56,7 +48,7 @@ $font_2: icomoon !important;
 				color: $color-purple_light;
 				font-weight: $font-weight--bold;
 				outline: none;
-				background: $white;
+				background: $color-white;
 				text-transform: uppercase;
 				@include media($medium-down) {
 					font-size: 18px;
@@ -85,7 +77,7 @@ $font_2: icomoon !important;
 					background: $color-purple_light;
 					color: $color-teal;
 					span {
-						color: $white;
+						color: $color-white;
 					}
 				}
 				a::after {
@@ -182,12 +174,7 @@ $font_2: icomoon !important;
 
 
 h3 {
-    font-size: 22px;
-    font-weight: 600;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    line-height: 1;
-    margin-bottom: $small-spacing;
+   	line-height: 1;
 }
 
 
