--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -49,6 +49,14 @@ hr {
   margin: $base-spacing 0;
 }
 
+.base-headline {
+  font-size: em(20px);
+  text-transform: uppercase;
+  font-weight: $font-weight--bold;
+  letter-spacing: 1px;
+  margin-bottom: $small-spacing;
+}
+
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .section-title {
     max-width: 85%;
@@ -57,9 +65,9 @@ hr {
 }
 
 
-#example-section {
+.example-section {
   padding: 80px 0;
-  background-color: #F6F9F9;
+  background-color: $secondary-background-color;
 }
 
 .section-title {
