--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -1,4 +1,5 @@
 @import "buttons";
+@import "badges";
 @import "forms";
 @import "layout";
 @import "navbar";
@@ -10,3 +11,4 @@
 @import "triangle";
 @import "countdown";
 @import "hero";
+@import "sliders";
