--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -57,6 +57,28 @@ Home sections
 }
 
 // Scroll Icon
+
+.arrow {
+  text-align: center;
+  .icon-wrap {
+    @include position(absolute, null null 20px 50%);
+    width: 40px;
+    margin-left: -20px;
+    text-align: center;
+    transition: all 500ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
+    > img {
+      @include position(absolute, null null 4px 50%);
+      width: 40px;
+      margin-left: -20px;
+      animation: scroll-down-anim 1s infinite;
+      z-index: 2;
+    }
+  }
+}
+
+
+
+
 .scroll-down {
   width: 40px;
   height: 40px;
