--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -369,12 +369,11 @@ $button-transistion-duration: 0.3s;
       }
 
       .search-button {
+        @include margin(-20px 0 0);
         width: 40px;
         height: 40px;
         line-height: 40px;
         padding: 0;
-        margin-bottom: 0;
-        margin-top: -20px;
         position: absolute;
         top: 50%;
         right: 1px;
