--- a/scss/variables/_variables.scss
+++ b/scss/variables/_variables.scss
@@ -15,7 +15,7 @@ $font-weight--bold       : 700;
 $font-weight--black      : 900;
 
 // Font Sizes
-$base-font-size: 16px;
+$base-font-size: em(16px);
 
 // Line height
 $base-line-height: 1.5;
