--- a/scss/components/_layout.scss
+++ b/scss/components/_layout.scss
@@ -70,14 +70,6 @@
 
 
 
-
-
-
-
-
-
-
-
 .events {
   @include outer-container;
 
@@ -119,122 +111,88 @@
 
 
 
-.work-item {
-  float: left;
-  display: block;
-  width: 33.33%;
 
-  &:hover {
-    .work-intro {
-      /*bottom: auto;*/
-      /*top: 50%;*/
-      color: #fff;
-      transform: translateY(-99px);
-      z-index: 3;
-    }
 
-    .work-title {
-      color: #ccc;
-    }
 
-    .work-descr {
-      color: #999;
-    }
-
-    .work-img {
-      &:after {
-        background: rgba(20, 20, 20, 0.85);
-        color: #fff;
-      }
-
-      > img {
-        transform: scale(1.05);
-      }
-    }
+.landing__events {
+  
+  .section-title {
+    margin-bottom: 30px;
   }
 
-  > a {
-    display: block;
-    padding: 0 0 84px 0;
-    position: relative;
-    color: #111;
-    border: none;
-
-    &:hover {
-      color: #111;
-      border: none;
-    }
+  .events__more {
+    float: right;
+    margin-top: 7px;
+    color: #999;
+    font-size: 11px;
+    font-weight: 400;
+    letter-spacing: 0.2em;
+    transition: all 0.27s cubic-bezier(0, 0, 0.58, 1);
   }
+}
 
-  .work-img {
+
+.blog-posts-carousel {
+  border-bottom: 1px solid $color-gray;
+}
+
+
+
+
+
+
+.blog-posts-carousel-item {
+  padding-bottom: 20px;
+  text-align: center;
+
+  //colors
+  $color_tapa_approx: #777;
+  $color_woodsmoke_approx: #111;
+  $color_silver_chalice_approx: #aaa;
+
+  .post-prev-img {
+    margin-bottom: $base-spacing;
     position: relative;
-    overflow: hidden;
 
-    &:after {
-      content: " ";
-      display: block;
-      width: 100%;
-      height: 100%;
-      position: absolute;
-      top: 0;
-      left: 0;
-      background: rgba(250, 250, 250, 0);
-      transition: all 0.27s cubic-bezier(0.3, 0.1, 0.58, 1);
+    a {
+      transition: all 0.2s cubic-bezier(0.3, 0.1, 0.58, 1);
+      opacity: 1;
     }
 
     img {
-      transition: all 0.3s cubic-bezier(0.3, 0.1, 0.58, 1);
       width: 100%;
-      display: block;
-      overflow: hidden;
+      transition: all 0.2s cubic-bezier(0.3, 0.1, 0.58, 1);
+      opacity: 1;
+
+      &:hover {
+        opacity: .85;
+      }
     }
   }
 
-  .work-intro {
-    width: 100%;
-    height: 84px;
-    padding: 20px 20px 0 20px;
-    box-sizing: border-box;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    text-align: center;
-    overflow: hidden;
-    transition: all 0.27s cubic-bezier(0.3, 0.1, 0.58, 1);
+  .post-prev-title {
+    margin-bottom: $base-font-size / 2;
+    font-size: em(18px);
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    padding: 0 $small-spacing;
 
-    .work-title {
-      margin: 0 0 8px 0;
-      padding: 0;
-      font-size: 13px;
-      font-weight: 400;
-      text-transform: uppercase;
-      letter-spacing: 0.2em;
-      line-height: 1.2;
-    }
+    a {
+      font-weight: $font-weight--medium;
+      text-decoration: none;
+      transition: all 0.27s cubic-bezier(0.3, 0.1, 0.58, 1);
 
-    .work-descr {
-      font-size: 11px;
-      text-align: center;
-      text-transform: uppercase;
-      color: #aaa;
-      line-height: 1.2;
+      &:hover {
+        color: darken($color-purple_light, 20%);
+      }
     }
   }
+
+  .post-prev-text {
+    margin-bottom: $base-spacing;
+    padding: 0 $small-spacing;
+    font-size: 15px;
+    font-weight: 300;
+    line-height: 1.75;
+  }
 }
-
-.landing-blog-tiles {
-  position: relative;
-  @include outer-container(100%);
-}
-
-
-
-
-
-
-
-
-
-
-
-
