--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -5,6 +5,7 @@
 @import "navbar";
 @import "tabs";
 @import "lists";
+@import "temporary";
 @import "parallax";
 @import "media";
 @import "tables";
