--- a/scss/components/_temporary.scss
+++ b/scss/components/_temporary.scss
@@ -48,17 +48,8 @@
 
 
 
-//colors
-$black_20: rgba(0, 0, 0, 0.2);
-$black_30: rgba(0, 0, 0, 0.3);
-$white: white;
-$color_mako_approx: #434a54;
-$black_10: rgba(0, 0, 0, 0.1);
 
-//@extend-elements
-//original selectors
-//.sponsorsFooter ul span, .sponsorsFooter ul span li >a
-%extend_1 {
+%sposnsors-extend_1 {
   cursor: default !important;
   border: none !important;
   outline: 0 !important;
@@ -72,7 +63,7 @@ $black_10: rgba(0, 0, 0, 0.1);
 
   .base-headline {
     > strong {
-      font-weight: 700 !important;
+      font-weight: 700;
     }
   }
 
@@ -82,39 +73,29 @@ $black_10: rgba(0, 0, 0, 0.1);
   }
 
   ul {
+    padding: $small-spacing 0;
     display: block;
 
     span {
-      display: inline !important;
-      background: $white;
-      
-      //Instead of the line below you could use @include word-break($value)
-      word-break: break-all;
-      word-wrap: break-word;
-      margin: 0;
+      display: inline;
       padding: 26px 0;
-
-      //Instead of the line below you could use @include transition($transition-1, $transition-2, $transition-3, $transition-4, $transition-5, $transition-6, $transition-7, $transition-8, $transition-9, $transition-10)
       transition: opacity 0.25s ease;
-
-      @extend %extend_1;
+      @extend %sposnsors-extend_1;
 
       li > a {
-        @extend %extend_1;
+        @extend %sposnsors-extend_1;
       }
     }
 
     li {
-      margin: 35px 16px 0;
+      margin: 0 16px;
       display: inline-block;
     }
 
     &.enter > span {
       &.hover {
         opacity: 1;
-
-        //Instead of the line below you could use @include box-shadow($shadow-1, $shadow-2, $shadow-3, $shadow-4, $shadow-5, $shadow-6, $shadow-7, $shadow-8, $shadow-9, $shadow-10)
-        box-shadow: inset -1px 0 0 0 $black_10, inset 1px 0 0 0 $black_10;
+        box-shadow: inset -1px 0 0 0 $color-shadow, inset 1px 0 0 0 $color-shadow;
       }
 
       &:not(.hover) {
@@ -125,25 +106,13 @@ $black_10: rgba(0, 0, 0, 0.1);
 }
 
 @media (max-width: 750px) {
-  .p {
-    margin-left: -200px;
-    margin-top: -120px;
-    max-width: 400px;
-    width: 400px;
-    max-height: 240px;
-    height: 240px;
-
-    //Instead of the line below you could use @include box-shadow($shadow-1, $shadow-2, $shadow-3, $shadow-4, $shadow-5, $shadow-6, $shadow-7, $shadow-8, $shadow-9, $shadow-10)
-    box-shadow: 2px 3px 0 0 $black_20, 0 -240px 0 0 $black_30, 0 -480px 0 0 $black_30;
-  }
-
   .sponsorsFooter {
     img {
       max-width: 70px;
     }
 
     ul li {
-      margin: 15px 5px 0;
+      margin: 0 5px;
     }
   }
 }
