--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -21,7 +21,7 @@ $button-transistion-duration: 0.3s;
   height: $navigation-height / 1.3;
   line-height: $navigation-height / 1.3;
   font-size: 12px;
-  font-weight: 400;
+  font-weight: $font-weight--light;
   letter-spacing: 1px;
   text-transform: uppercase;
 }
@@ -218,7 +218,7 @@ $button-transistion-duration: 0.3s;
 
     a.nav-link {
       @extend %nav-item-link;
-      font-weight: 600;
+      font-weight: $font-weight--medium;
       @include media($horizontal-bar-mode) {
         display: inline-block;
         height: $navigation-height;
