--- a/scss/components/_sliders.scss
+++ b/scss/components/_sliders.scss
@@ -179,6 +179,7 @@
       padding: 0 $base-spacing;
 
       .base-headline {
+        display: block;
         margin-bottom: $base-font-size / 2;
 
         &:hover {
@@ -187,8 +188,8 @@
       }
 
       &--desc {
-        font-weight: 300;
-        line-height: 1.75;
+        // font-weight: 300;
+        // line-height: 1.75;
       }
     }
   }
