--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -13,6 +13,7 @@ html {
   box-sizing: inherit;
 }
 
+
 html,
 body {
   height: 100%;
@@ -29,9 +30,60 @@ body {
   margin: 0;
 }
 
-// .page {
-//   overflow: hidden;
-// }
+
+// From Rythem
+html{
+  overflow-y: scroll;
+    -ms-overflow-style: scrollbar;
+}
+.page{
+  overflow: hidden;
+}
+
+.body-masked{
+  display: none;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: #fff url(../images/loader.gif) no-repeat center center;
+  z-index: 100000;  
+}
+
+.mask-delay{
+  -webkit-animation-delay: 0.75s;
+  -moz-animation-delay: 0.75s;
+  animation-delay: 0.75s;
+}
+.mask-speed{
+  -webkit-animation-duration: 0.25s !important;
+  -moz-animation-duration: 0.25s !important;
+  animation-duration: 0.25s !important;
+} 
+iframe{
+    border: none;
+}
+a, b, div, ul, li{
+  -webkit-tap-highlight-color: rgba(0,0,0,0); 
+  -webkit-tap-highlight-color: transparent; 
+  -moz-outline-: none;
+}
+a:focus,
+a:active{
+  -moz-outline: none;
+  outline: none;
+}
+img:not([draggable]), embed, object, video{
+    max-width: 100%;
+    height: auto;
+}
+
+.hidden-xs {
+  @include media($xsmall-only) {
+    display: none;
+  }
+}
 
 .page-section,
 .small-section {
@@ -83,25 +135,6 @@ body {
 
 
 
-
-// From Rythem
-iframe{
-    border: none;
-}
-a, b, div, ul, li{
-  -webkit-tap-highlight-color: rgba(0,0,0,0); 
-  -webkit-tap-highlight-color: transparent; 
-  -moz-outline-: none;
-}
-a:focus,
-a:active{
-  -moz-outline: none;
-  outline: none;
-}
-img:not([draggable]), embed, object, video{
-    max-width: 100%;
-    height: auto;
-}
 
 
 
