--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -32,111 +32,24 @@ Home sections
 }
 
 .hero__logo {
-  margin: 10px auto;
+  vertical-align: middle;
+  display: block;
+  margin: 0 auto 60px;
   width: 50%;
   height: auto;
 }
 
-.hero__subheading {
-  text-transform: uppercase;
-  font-size: 20px;
-  line-height: 1.7;
-  letter-spacing: 0.25em;
-  color: #fff;
-  font-weight: $font-weight--medium;
-
-  &:last-of-type {
-    margin-left: 20px;
-  }
-
-  .fa {
-    line-height: 1;
-    color: $color-teal;
-    margin-right: 8px;
-  }
-}
-
 // Scroll Icon
 
+
 .arrow {
-  text-align: center;
-  .icon-wrap {
-    @include position(absolute, null null 20px 50%);
-    width: 40px;
-    margin-left: -20px;
-    text-align: center;
-    transition: all 500ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
-    > img {
-      @include position(absolute, null null 4px 50%);
-      width: 40px;
-      margin-left: -20px;
-      animation: scroll-down-anim 1s infinite;
-      z-index: 2;
-    }
-  }
-}
-
-
-
-
-.scroll-down {
-  width: 40px;
-  height: 40px;
-  margin-left: -20px;
-  position: absolute;
-  bottom: 20px;
-  left: 50%;
-  text-align: center;
-  text-decoration: none;
-  -webkit-transition: all 500ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
-  -moz-transition: all 500ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
-  -o-transition: all 500ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
-  transition: all 500ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
-
-  &:before {
-    display: block;
-    content: "";
-    width: 20px;
-    height: 20px;
-    margin: 0 0 0 -10px;
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    background: #fff;
-    -webkit-border-radius: 2px;
-    -moz-border-radius: 2px;
-    border-radius: 2px;
-    -webkit-transform: rotate(45deg);
-    -moz-transform: rotate(45deg);
-    -o-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
-    transform: rotate(45deg);
-    -webkit-transition: all 500ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
-    -moz-transition: all 500ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
-    -o-transition: all 500ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
-    transition: all 500ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
-    z-index: 1;
-  }
-
-  &:hover {
-    &:before {
-      opacity: .6;
-    }
-  }
-
-  .scroll-down-icon {
-    display: block;
-    width: 10px;
-    height: 10px;
-    margin-left: -5px;
-    position: absolute;
-    left: 50%;
-    bottom: 4px;
-    color: #111;
-    font-size: 15px;
-    -webkit-animation: scroll-down-anim 1s infinite;
-    -moz-animation: scroll-down-anim 1s infinite;
-    -o-animation: scroll-down-anim 1s infinite;
+  @include position(absolute, null null 15px 50%);
+  width: 30px;
+  margin-left: -15px;
+  > img {
+    @include position(absolute, null null 4px 50%);
+    width: 30px;
+    margin-left: -15px;
     animation: scroll-down-anim 1s infinite;
     z-index: 2;
   }
@@ -161,6 +74,7 @@ Home sections
   }
 }
 
+
 .bg-video-overlay {
   position: absolute;
   width: 100%;
@@ -168,14 +82,26 @@ Home sections
   top: 0px;
   left: 0px;
 
-  &:before,
-  .YTPOverlay:before {
+  &:before {
     content: " ";
     width: 100%;
     height: 100%;
     position: absolute;
     top: 0;
     left: 0;
-    background: rgba(34, 34, 34, 0.5);
+
+    // Solid Color
+    // background: rgba($color-teal, 0.5);
+
+    // Pattern BG
+    // background-repeat: repeat;
+    // background-image: url('../img/bg_pattern.png');
+
+    // Gradient
+    opacity: .50;
+    background: #1eb089;
+    background: linear-gradient(to right, $color-purple 0%, $color-teal 100%, $color-purple_light 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='$color-purple', endColorstr='$color-purple_light', GradientType=1);
+
   }
 }
