--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -1,7 +1,6 @@
 $navigation-height_top: 90px;
 $navigation-height: 60px;
 $horizontal-bar-mode: 900px;
-$navigation-background: $dark-gray;
 $navigation-color: transparentize(white, 0.2);
 $navigation-color-hover: white;
 $navigation-z-index: 1000;
@@ -32,7 +31,7 @@ $button-transistion-duration: 0.3s;
 }
 
 .navigation {
-  background: $navigation-background;
+  background: $color-black;
   z-index: $navigation-z-index !important;
   border-bottom: 2px solid $color-teal;
 
