added gradient overlay to events slider

--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -28,6 +28,7 @@ $white_75: rgba($white, .75);
   font-size: 12px;
   font-weight: 500;
   letter-spacing: 1px;
+  text-indent: 1px;
   line-height: 1;
   margin: 0 4px 8px;
   padding: $small-spacing $base-spacing;
