--- a/scss/components/_sliders.scss
+++ b/scss/components/_sliders.scss
@@ -168,12 +168,51 @@
       opacity: 1;
 
       &:hover {
-        opacity: .85;
+        .special-events__overlay {
+          opacity: .90;
+          @include size(100%);
+        }
       }
 
       > img {
         width: 100%;
       }
+
+      .special-events__overlay {
+        background: none repeat scroll 0 0;
+        background: #1eb089;
+        background: linear-gradient(to right, $color-purple 0%, $color-teal 100%, $color-purple_light 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='$color-purple', endColorstr='$color-purple_light', GradientType=1);
+        bottom: 0;
+        left: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        opacity: 0;
+        display: block;
+        position: absolute;
+        z-index: 9;
+        overflow: hidden;
+        transition: all 0.5s;
+        button.overlay-button {
+          display: block;
+          position: absolute;
+          z-index: 10;
+          color: $color-black;
+          font-weight: 500;
+          font-size: 1em;
+          line-height: 30px;
+          top: calc(50% - 33px);
+          left: 0;
+          width: 100%;
+          padding: 0;
+          border: 0;
+          margin: auto;
+          background: transparent;
+        }
+      }
+
+
     }
 
     .special-events__content {
