--- a/scss/components/_sliders.scss
+++ b/scss/components/_sliders.scss
@@ -209,6 +209,9 @@
           border: 0;
           margin: auto;
           background: transparent;
+          i {
+            font-size: 24px;
+          }
         }
       }
 
