--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -33,7 +33,8 @@ $button-transistion-duration: 0.3s;
 .navigation {
   background: $color-black;
   z-index: $navigation-z-index !important;
-  border-bottom: 2px solid $color-teal;
+  // border-bottom: 2px solid $color-teal;
+  box-shadow: 0px 3px 50px rgba(0, 0, 0, .15);
 
 
 
